test/expected/declare_f_f_i.out
declare f as function returning function returning int
                              ^
31: error: function returning function is illegal; did you mean function returning pointer to function?
